--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ development:
   database: budget_app_development
   pool: 5
   username: budget_app
-  password:
+  password: password1
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -49,7 +49,7 @@ test:
   database: budget_app_test
   pool: 5
   username: budget_app
-  password:
+  password: password1
 
 production:
   adapter: postgresql
@@ -57,4 +57,4 @@ production:
   database: budget_app_production
   pool: 5
   username: budget_app
-  password:
+  password: password1
